// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageLogic /> should renders correctly when authenticated 1`] = `
<Flex
  direction="column"
  id="debateStep-debateStep123"
  spacing={8}
>
  <Relay(DebateStepPageMainActions)
    isMobile={false}
    step={
      Object {
        " $fragmentRefs": null,
        "id": "debateStep123",
        "timeRange": Object {
          "hasStarted": true,
        },
      }
    }
  />
  <Relay(DebateStepPageArguments)
    isMobile={false}
    step={
      Object {
        " $fragmentRefs": null,
        "id": "debateStep123",
        "timeRange": Object {
          "hasStarted": true,
        },
      }
    }
    viewer={
      Object {
        " $fragmentRefs": null,
      }
    }
  />
  <Connect(LoginModal) />
</Flex>
`;

exports[`<DebateStepPageLogic /> should renders correctly when not authenticated 1`] = `
<Flex
  direction="column"
  id="debateStep-debateStep123"
  spacing={8}
>
  <Relay(DebateStepPageMainActions)
    isMobile={false}
    step={
      Object {
        " $fragmentRefs": null,
        "id": "debateStep123",
        "timeRange": Object {
          "hasStarted": true,
        },
      }
    }
  />
  <Relay(DebateStepPageArguments)
    isMobile={false}
    step={
      Object {
        " $fragmentRefs": null,
        "id": "debateStep123",
        "timeRange": Object {
          "hasStarted": true,
        },
      }
    }
    viewer={null}
  />
  <Connect(LoginModal) />
</Flex>
`;

exports[`<DebateStepPageLogic /> should renders correctly when step not started 1`] = `
<Relay(DebateStepPageNotYetStarted)
  step={
    Object {
      " $fragmentRefs": null,
      "id": "debateStep123",
      "timeRange": Object {
        "hasStarted": false,
      },
    }
  }
/>
`;
